# bors-data

./: .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  setup.cfg
docker/: Dockerfile  cron.sh  cronpy  docker-compose.yml  requirements.txt  run.sh
src/: apikey.txt  common.py  config.dev.json  config.json  config.test.json  datacollection.py  main.py  mongdoconnection.py  mongodbconnection.py  mongodbkey.txt
